[project]
name = "pyocd-bitbang"
description = "A pyOCD remote bitbang DebugProbe plugin for Cortex-M SWD"
authors = [
    { name = "Shareef Jalloq" },
    { email = "shareef.jalloq@idexbiometrics.com" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.6"
keywords = [
    "pyOCD",
    "Plugin",
    "Cortex-M",
    "SWD",
    "JTAG",
    "bitbang",
    "DebugProbe"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pyocd"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/idex-biometrics/pyocd-bitbang"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyocd_bitbang/_version.py"

[project.entry_points."pyocd.probe"]
bitbang = "pyocd_bitbang:RemoteBitbangProbePlugin"
