[metadata]
name = pyocd-bitbang
description = PyOCD debug probe plugin for Bitbang debug probes
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Shareef Jalloq
maintainer_email = shareef.jalloq@idexbiometrics.com
url = https://github.com/idex-biometrics/pyocd-bitbang
download_url = https://pypi.org/project/pyocd-bitbang/
keywords = SWD Bitbang PyOCD Plugin
platforms = Windows, Linux, macOS, BSD
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Hardware
    Topic :: Utilities
project_urls =
    Documentation = https://pyocd.io/docs
    # Issues = https://github.com/pyocd/pyocd-pemicro/issues
    # Discussions = https://github.com/pyocd/pyOCD/discussions
    # Releases = https://github.com/pyocd/pyocd-pemicro/releases

[options]
zip_safe = True
packages = find:
python_requires = >=3.6.0

[options.entry_points]
pyocd.probe =
    bitbang = pyocd_bitbang:RemoteBitbangProbePlugin
    backdoor = pyocd_bitbang:RemoteBitbangBackdoorProbePlugin
